--- a/platformio.ini
+++ b/platformio.ini
@@ -27,3 +27,6 @@ upload_speed = 921600
 monitor_speed = 115200
 monitor_echo = yes
 
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.12.3
+	adafruit/Adafruit RA8875@^1.4.4
